fix(blazorui): resolve overflow issues of Persona #7797 (#7806)

--- a/src/BlazorUI/Bit.BlazorUI/Components/Persona/BitPersona.scss
+++ b/src/BlazorUI/Bit.BlazorUI/Components/Persona/BitPersona.scss
@@ -86,6 +86,7 @@
 
 .bit-prs-det {
     display: flex;
+    overflow: hidden;
     text-align: start;
     flex-direction: column;
     justify-content: space-around;
