--- a/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Persona/BitPersonaDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Persona/BitPersonaDemo.razor.scss
@@ -1,5 +1,9 @@
 ﻿@import "../../../Styles/abstracts/_functions.scss";
 
+.example-content {
+    max-width: rem2(300px);
+}
+
 .title {
     font-weight: 600;
     margin-top: rem2(40px);
